--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <div class="d-flex justify-content-center">
                 <h1><span id="score1">0</span> to <span id="score2">0</span></h1>              
               </div>
-              <h5 class="card-title">Score</h5>
+              <h5 id="who-is" class="card-title">Who will win? </h5>
                 <label for="score-select">Play to:</label>
                 <select class="form-select" id="score-select">
                     <option value="0">-Pick a Goal-</option>
@@ -30,6 +30,9 @@
                 <button class="btn btn-primary m-2">Player 1</button>
                 <button class="btn btn-secondary m-2">Player 2</button>
                 <button class="btn btn-warning m-2">Reset</button>
+                <div class="d-flex justify-content-center">
+                   <button class="pick-side btn m-2 px-5">Pick Side</button>
+                </div>
             </div>
         </div>
     </div>
